kubernetes/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: solar-system
  namespace: ${NAMESPACE}
  annotations:
    ingress.class: traefik
spec:
  rules:
  - host: solar-system-${NAMESPACE}.${INGRESS_IP}.nip.io
    http:
      paths:
      - backend:
          service:
            name: solar-system
            port:
              number: 3000
        path: /
        pathType: Prefix
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   annotations:
#     kubernetes.io/ingress.class: nginx
#     kubernetes.io/tls-acme: "true"
#   name: solar-system
#   namespace: ${NAMESPACE}
# spec:
#     rules:
#     - host: solar-system-${NAMESPACE}.${INGRESS_IP}.nip.io
#       http:
#         paths:
#         - backend:
#             service:
#               name: solar-system
#               port:
#                 number: 3000
#           path: /
#           pathType: Prefix
#     tls:
#     - hosts:
#       - solar-system-${NAMESPACE}.${INGRESS_IP}.nip.io
#       secretName: ingress-local-tls
